feat: added drizzle and turso

--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,9 @@
     "dev": "concurrently \"tsc -w\" \"nodemon --env-file .env dist/app.js\"",
     "format": "pnpm exec prettier . --write",
     "lint": "pnpm exec eslint --fix .",
-    "serve": "node dist/app.js"
+    "serve": "node dist/app.js",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
   },
   "author": "Vasu Jain",
   "devDependencies": {
@@ -20,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "concurrently": "^8.2.2",
+    "drizzle-kit": "^0.22.8",
     "eslint": "^9.6.0",
     "globals": "^15.8.0",
     "nodemon": "^3.1.4",
@@ -32,7 +35,9 @@
   "dependencies": {
     "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
+    "@libsql/client": "^0.7.0",
     "argon2": "^0.40.3",
+    "drizzle-orm": "^0.31.2",
     "fastify": "^4.28.1",
     "fastify-zod": "^1.4.0",
     "zod": "^3.23.8",
