--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,7 @@
     "serve": "node dist/app.js",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "prepare": "husky"
+    "prepare": "cd .. && husky api/.husky"
   },
   "author": "Vasu Jain",
   "devDependencies": {
