--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
     "@libsql/client": "^0.7.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "argon2": "^0.40.3",
     "drizzle-orm": "^0.31.2",
     "fastify": "^4.28.1",
