feat: added user schemas and register route

--- a/api/package.json
+++ b/api/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "build": "rimraf dist && tsc",
     "prestart": "pnpm run build",
-    "start": "node --env-file .env dist/app.js",
+    "start": "node --env-file .env dist/src/app.js",
     "predev": "rimraf dist && pnpm run build",
-    "dev": "concurrently \"tsc -w\" \"nodemon --env-file .env dist/app.js\"",
+    "dev": "concurrently \"tsc -w\" \"nodemon --env-file .env dist/src/app.js\"",
     "format": "pnpm exec prettier . --write",
     "lint": "pnpm exec eslint --fix .",
-    "serve": "node dist/app.js",
+    "serve": "node dist/src/app.js",
     "db:generate": "drizzle-kit generate sqlite",
     "db:migrate": "drizzle-kit migrate sqlite",
     "studio": "drizzle-kit studio",
