--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,7 @@
     "typescript-eslint": "^7.15.0"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.3.1",
     "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
     "@libsql/client": "^0.7.0",
