--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
+    "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
     "@libsql/client": "^0.7.0",
