--- a/web/package.json
+++ b/web/package.json
@@ -36,11 +36,15 @@
   },
   "type": "module",
   "dependencies": {
+    "axios": "^1.7.2",
     "bits-ui": "^0.21.11",
     "clsx": "^2.1.1",
+    "formsnap": "^1.0.1",
     "lucide-svelte": "^0.399.0",
     "mode-watcher": "^0.3.1",
+    "sveltekit-superforms": "^2.15.2",
     "tailwind-merge": "^2.3.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "zod": "^3.23.8"
   }
 }
