--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "BudgetBuddy-web",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -9,7 +10,10 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "db:generate": "drizzle-kit generate sqlite",
+    "db:migrate": "drizzle-kit migrate sqlite",
+    "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
@@ -18,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/eslint": "^8.56.7",
     "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.22.8",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
@@ -34,11 +39,13 @@
     "typescript-eslint": "^8.0.0-alpha.20",
     "vite": "^5.0.3"
   },
-  "type": "module",
   "dependencies": {
+    "@libsql/client": "^0.7.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "axios": "^1.7.2",
     "bits-ui": "^0.21.11",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.31.4",
     "formsnap": "^1.0.1",
     "lucide-svelte": "^0.399.0",
     "mode-watcher": "^0.3.1",
