--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^1.7.2",
     "bits-ui": "^0.21.11",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.4",
     "formsnap": "^1.0.1",
     "lucide-svelte": "^0.399.0",
